src/scripts/components/h5p-crossword-cell.scss
.h5p-crossword-cell {
  background-color: var(--h5p-theme-ui-base);
  margin: 0;
  outline: none;
  padding: 0;
  position: relative;
  -webkit-user-select: none; /* Safari wants special treatment */
  user-select: none;

  &::after {
    content: '';
    display: block;
    margin-top: 100%;
  }

  .h5p-crossword-cell-solution-word-circle {
    background-color: transparent;
    border: 0.075em solid var(--h5p-theme-text-secondary);
    border-radius: 50%;
    height: calc(100% - 0.15em);
    left: 50%;
    position: absolute;
    top: 50%;
    transform: translate(-50%, -50%);
    width: calc(100% - 0.15em);
  }

  .h5p-crossword-cell-solution-word-marker {
    background-color: var(--h5p-theme-ui-base);
    bottom: 0;
    color: var(--h5p-theme-text-third);
    font-size: 0.5em;
    line-height: 0.5em;
    padding: 0.4em 0.3em 0.4em 0.4em;
    position: absolute;
    right: 0;
  }

  .h5p-crossword-cell-content-wrapper {
    align-items: center;
    display: flex;
    flex-direction: column;
    height: 100%;
    justify-content: center;
    left: 0;
    position: absolute;
    top: 0;
    width: 100%;

    .h5p-crossword-cell-content {
      background-color: transparent;
      border: 0;
      caret-color: transparent;
      color: transparent;
      font-size: var(--h5p-theme-font-size-l);
      height: 100%;
      left: 0;
      margin: 0;
      padding: 0;
      position: absolute;
      text-align: center;
      text-anchor: middle;
      text-transform: uppercase;
      top: 0;
      width: 100%;
      z-index: 1;
    }

    .h5p-crossword-cell-canvas {
      background-color: transparent;
      border: 0;
      color: var(--h5p-theme-text-primary);
      font-size: var(--h5p-theme-font-size-l);
      margin: 0;
      padding: 0;
      text-align: center;
      z-index: 1;
    }

    .h5p-crossword-cell-clue-id-marker {
      background-color: var(--h5p-theme-ui-base);
      color: var(--h5p-theme-text-third);
      font-size: 0.5em;
      left: 0;
      line-height: 0.5em;
      padding: 0.4em 0.4em 0.4em 0.3em;
      position: absolute;
      top: 0;
    }
  }

  /** TODO: Clean this long list of rules up */
  &.h5p-crossword-highlight-normal {
    .h5p-crossword-cell-clue-id-marker,
    .h5p-crossword-cell-solution-word-marker {
      background: var(--h5p-theme-main-cta-base);
    }
  }

  &.h5p-crossword-solution-correct {
    .h5p-crossword-cell-clue-id-marker,
    .h5p-crossword-cell-solution-word-marker {
      background: var(--h5p-theme-feedback-correct-secondary);
    }

    &.h5p-crossword-highlight-normal {
      .h5p-crossword-cell-clue-id-marker,
      .h5p-crossword-cell-solution-word-marker {
        background: var(--h5p-theme-feedback-correct-main);
      }
    }
  }

  &.h5p-crossword-solution-wrong {
    .h5p-crossword-cell-clue-id-marker,
    .h5p-crossword-cell-solution-word-marker {
      background: var(--h5p-theme-feedback-incorrect-secondary);
    }
  }

  &.h5p-crossword-solution-neutral {
    .h5p-crossword-cell-clue-id-marker,
    .h5p-crossword-cell-solution-word-marker {
      background: var(--h5p-theme-feedback-neutral-secondary);
    }
  }

  &.h5p-crossword-solution-wrong.h5p-crossword-highlight-normal {
    .h5p-crossword-cell-clue-id-marker,
    .h5p-crossword-cell-solution-word-marker {
      background: var(--h5p-theme-feedback-incorrect-main);
    }
  }

  &.h5p-crossword-solution-neutral.h5p-crossword-highlight-normal {
    .h5p-crossword-cell-clue-id-marker,
    .h5p-crossword-cell-solution-word-marker {
      background: var(--h5p-theme-feedback-neutral-main);
    }
  }

  &:not(.h5p-crossword-solution-correct):not(.h5p-crossword-solution-wrong):not(.h5p-crossword-solution-neutral).h5p-crossword-highlight-normal {
    background-color: var(--h5p-theme-main-cta-base);
  }

  &.h5p-crossword-solution-correct.h5p-crossword-highlight-normal {
    background-color: var(--h5p-theme-feedback-correct-main);
  }

  &.h5p-crossword-solution-wrong.h5p-crossword-highlight-normal {
    background-color: var(--h5p-theme-feedback-incorrect-main);
  }

  &.h5p-crossword-solution-neutral.h5p-crossword-highlight-normal {
    background-color: var(--h5p-theme-feedback-neutral-main);
  }

  &.h5p-crossword-highlight-focus {
    border-color: rgba(232, 153, 62, 0.8);
    box-shadow: 0 0 0.2em 0.2em var(--h5p-theme-contrast-cta);
    z-index: 1;

    .h5p-crossword-cell-clue-id-marker,
    .h5p-crossword-cell-solution-word-marker {
      color: var(--h5p-theme-ui-base);
    }
  }

  &.h5p-crossword-highlight-normal {
    .h5p-crossword-cell-clue-id-marker,
    .h5p-crossword-cell-solution-word-marker {
      color: var(--h5p-theme-text-secondary);
    }
  }

  &.h5p-crossword-highlight-focus {
    color: var(--h5p-theme-ui-base);
  }

  &.h5p-crossword-solution-correct {
    background: var(--h5p-theme-feedback-correct-secondary);

    .h5p-crossword-cell-canvas {
      color: var(--h5p-theme-feedback-correct-main);
    }
  }

  &.h5p-crossword-highlight-normal .h5p-crossword-cell-canvas {
    color: var(--h5p-theme-ui-base);
  }

  &.h5p-crossword-solution-wrong {
    background: var(--h5p-theme-feedback-incorrect-secondary);
  }

  &.h5p-crossword-solution-neutral {
    background: var(--h5p-theme-feedback-neutral-secondary);
  }

  &.h5p-crossword-solution-wrong .h5p-crossword-cell-canvas {
    color: var(--h5p-theme-feedback-incorrect-main);
  }

  &.h5p-crossword-solution-neutral:not(.h5p-crossword-highlight-normal) .h5p-crossword-cell-canvas {
    color: var(--h5p-theme-feedback-neutral-main);
  }

  &.h5p-crossword-solution-correct .h5p-crossword-cell-solution-word-circle {
    border-color: var(--h5p-theme-feedback-correct-main);
  }

  &.h5p-crossword-solution-wrong .h5p-crossword-cell-solution-word-circle {
    border-color: var(--h5p-theme-feedback-incorrect-main);
  }

  &.h5p-crossword-solution-neutral .h5p-crossword-cell-solution-word-circle {
    border-color: var(--h5p-theme-feedback-neutral-main);
  }
}

